<resources>
    <string name="app_name">My Savings</string>
    <string name="total_balance_title">Total balance:</string>
    <string name="total_balance_count">%s USD</string>
    <string name="receive">receive</string>
    <string name="spend">spend</string>
    <string name="transfer">transfer</string>
    <string name="choose_currency">card currency</string>
    <string name="title">card name</string>
    <string name="amount">card amount</string>
    <string name="choose_category">category</string>
    <string name="save_button">Save</string>
    <string name="enter_amount">enter amount</string>
    <string name="choose_card">choose card</string>
    <string name="spend_button">spend</string>
    <string name="get_button">get</string>
    <string name="from_card">from card</string>
    <string name="to_card">to card</string>
    <string name="transfer_button">transfer</string>
    <string name="add_card">add card</string>
    <string name="choose_card_error">Please, choose the card, or add it</string>
    <string name="incorrect_amount_error">Incorrect amount</string>
</resources>